; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_roxl_8_s.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_roxl_8_s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DY = common dso_local global i32 0, align 4
@REG_IR = common dso_local global i32 0, align 4
@FLAG_X = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4
@VFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_roxl_8_s() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* @DY, i32** %1, align 8
  %5 = load i32, i32* @REG_IR, align 4
  %6 = ashr i32 %5, 9
  %7 = sub nsw i32 %6, 1
  %8 = and i32 %7, 7
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* %2, align 4
  %10 = load i32*, i32** %1, align 8
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @MASK_OUT_ABOVE_8(i32 %11)
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 (...) @XFLAG_AS_1()
  %15 = shl i32 %14, 8
  %16 = or i32 %13, %15
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @ROL_9(i32 %16, i32 %17)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  store i32 %19, i32* @FLAG_X, align 4
  store i32 %19, i32* @FLAG_C, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @MASK_OUT_ABOVE_8(i32 %20)
  store i32 %21, i32* %4, align 4
  %22 = load i32*, i32** %1, align 8
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @MASK_OUT_BELOW_8(i32 %23)
  %25 = load i32, i32* %4, align 4
  %26 = or i32 %24, %25
  %27 = load i32*, i32** %1, align 8
  store i32 %26, i32* %27, align 4
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @NFLAG_8(i32 %28)
  store i32 %29, i32* @FLAG_N, align 4
  %30 = load i32, i32* %4, align 4
  store i32 %30, i32* @FLAG_Z, align 4
  %31 = load i32, i32* @VFLAG_CLEAR, align 4
  store i32 %31, i32* @FLAG_V, align 4
  ret void
}

declare dso_local i32 @MASK_OUT_ABOVE_8(i32) #1

declare dso_local i32 @ROL_9(i32, i32) #1

declare dso_local i32 @XFLAG_AS_1(...) #1

declare dso_local i32 @MASK_OUT_BELOW_8(i32) #1

declare dso_local i32 @NFLAG_8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
